--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
 
   postgres:
@@ -10,7 +12,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
-
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U inventory"]
       interval: 5s
@@ -21,17 +22,13 @@ services:
   backend:
     build: ./services/inventory-service
     container_name: inventory-backend
-
     environment:
       DATABASE_URL: postgresql+psycopg2://inventory:inventory123@postgres:5432/inventory_db
-
     depends_on:
       postgres:
         condition: service_healthy
-
     ports:
       - "8000:8000"
-
     restart: always
 
 
@@ -53,7 +50,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # ✅ FIXED (folder mount instead of single file)
+      - ./nginx:/etc/nginx/conf.d:ro
     depends_on:
       - frontend
       - backend
