--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,22 +1,14 @@
 server {
     listen 80;
 
-    # Frontend dashboard
     location / {
-        proxy_pass http://frontend:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://inventory-frontend;
+        index index.html;
     }
 
-    # Backend API
     location /api/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://inventory-backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # Swagger docs
-    location /docs {
-        proxy_pass http://backend:8000/docs;
     }
 }
